Fix spacing and column setup for supporting and refuting evidence

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,11 +34,9 @@ body {
 .evidence {
   @include omega;
   .supporting {
-    @include pad($padding-from-screen-edge);
     @include span-columns(6);
   }
   .refuting {
-    @include pad($padding-from-screen-edge);
     @include span-columns(6);
     @include omega;
   }
