--- a/app/assets/stylesheets/facts/_show.scss
+++ b/app/assets/stylesheets/facts/_show.scss
@@ -30,7 +30,7 @@
   background:#f9f9f9;
   border-left:10px solid #ccc;
   display: table;
-  margin:0.5em 0px 0.25em 0px;
+  margin:0.5em 0px 40px 0px;
   padding:.5em 10px;
   min-height: 150px;
 }
